<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/padding_small"
    android:layout_height="@dimen/dialog_height_medium">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <edu.hust.truongvu.pdfviewer.customview.MyEditText
            android:id="@+id/edt_page_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:hint="@string/enter_number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <edu.hust.truongvu.pdfviewer.customview.MyButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/text_color_white" />
        <edu.hust.truongvu.pdfviewer.customview.MyButton
            android:id="@+id/btn_jump"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/margin_small"
            android:textColor="@color/text_color_white"
            android:background="@color/colorPrimaryDark"
            android:text="@string/jump_to"/>
    </LinearLayout>

</LinearLayout>