<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dialog_height_big"
    android:orientation="vertical"
    android:padding="@dimen/padding_small">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_weight="1">
        <edu.hust.truongvu.pdfviewer.customview.MyTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_medium"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/name"/>
        <edu.hust.truongvu.pdfviewer.customview.MyTextView
            android:id="@+id/file_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/file_size"
            android:textSize="@dimen/text_size_medium"
            android:layout_weight="3"
            android:text="Abc"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <edu.hust.truongvu.pdfviewer.customview.MyTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_medium"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/size" />
        <edu.hust.truongvu.pdfviewer.customview.MyTextView
            android:id="@+id/file_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_weight="3"
            android:textSize="@dimen/text_size_medium"
            android:text="File Size: abc"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/padding_medium"
        android:layout_weight="1">
        <edu.hust.truongvu.pdfviewer.customview.MyButton
            android:id="@+id/btn_Ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:text="@string/ok"/>
    </LinearLayout>




</LinearLayout>