<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/background_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_jump_to" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="Jump to special page"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:background="@drawable/background_edit_text"
                android:id="@+id/edt_page_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="16sp"
                android:hint="@string/enter_number"
                android:inputType="number" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="6dp"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"  />

            <TextView
                android:id="@+id/btn_jump"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingRight="10dp"
                android:paddingTop="6dp"
                android:text="@string/jump_to"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>